vlib/v/checker/tests/unknown_as_type.vv
type Expr = Int | String

struct Int {}

struct String {}

fn foo(e Expr) {
	x := e as Stringg
	println(x)
}

fn main() {
}
